# SkauTan

./: .gitignore  .gitmodules  .travis.yml  AVPP.cpp  AVPP.h  AudioDataSource.h  AudioEffects.cpp  AudioEffects.h  BackgroundTasks.cpp  BackgroundTasks.h  CMakeLists.txt  ColorDelegate.cpp  ColorDelegate.h  ComponentCollection.cpp  ComponentCollection.h  DJControllers.cpp  DJControllers.h  Database.cpp  Database.h  DatabaseBackup.cpp  DatabaseBackup.h  DatabaseImport.cpp  DatabaseImport.h  DatabaseUpgrade.cpp  DatabaseUpgrade.h  DatedOptional.h  DevNotes.md  DlgBackgroundTaskList.cpp  DlgBackgroundTaskList.h  DlgBackgroundTaskList.ui  DlgChooseImportTemplates.cpp  DlgChooseImportTemplates.h  DlgEditFilter.cpp  DlgEditFilter.h  DlgEditFilter.ui  DlgEditTemplate.cpp  DlgEditTemplate.h  DlgEditTemplate.ui  DlgEditTemplateItem.cpp  DlgEditTemplateItem.h  (+97 more)
BeatDetectTest/: BeatDetectTest.cpp  BeatDetectTest.pro  MultiTest.lua  Stubs.cpp
CMakeModules/: FindFFmpeg.cmake
Controller/: AbstractController.h  MidiController.cpp  MidiController.h  MidiEnumerator.cpp  MidiEnumerator.h  MidiPort.cpp  MidiPort.h
Experiments/: FreqExtract.cpp  MetadataParenthesis.lua
lib/HTTP/: EnvelopeParser.cpp  EnvelopeParser.h  FormParser.cpp  FormParser.h  Message.cpp  Message.h  MessageParser.cpp  MessageParser.h  MultipartParser.cpp  MultipartParser.h  NameValueParser.cpp  NameValueParser.h  StringUtils.cpp  StringUtils.h  TransferEncodingParser.cpp  TransferEncodingParser.h
res/: SkauTan.qrc  win.rc
res/VoteServer/: index.html
res/VoteServer/cz/: index.html
res/VoteServer/cz/static/: lang.js
res/VoteServer/static/: lang.js  lvs.css  lvs.js
res/other/: STT-LAT.SkauTanTemplates
src/: BackgroundIO.cpp  BackgroundIO.hpp  BackgroundTasks.cpp  BackgroundTasks.hpp  BackgroundTempoDetector.cpp  BackgroundTempoDetector.hpp  ComponentCollection.cpp  ComponentCollection.hpp  DJControllers.cpp  DJControllers.hpp  DatedOptional.hpp  DebugLogger.cpp  DebugLogger.hpp  Exception.hpp  Filter.cpp  Filter.hpp  IPlaylistItem.hpp  InstallConfiguration.cpp  InstallConfiguration.hpp  LengthHashCalculator.cpp  LengthHashCalculator.hpp  LocalVoteServer.cpp  LocalVoteServer.hpp  MetadataScanner.cpp  MetadataScanner.hpp  Playlist.cpp  Playlist.hpp  PlaylistImportExport.cpp  PlaylistImportExport.hpp  PlaylistItemSong.cpp  PlaylistItemSong.hpp  Settings.cpp  Settings.hpp  Song.cpp  Song.hpp  SongTempoDetector.cpp  SongTempoDetector.hpp  Stopwatch.cpp  Stopwatch.hpp  Template.cpp  (+8 more)
src/Audio/: AVPP.cpp  AVPP.hpp  AudioDataSource.hpp  AudioEffects.cpp  AudioEffects.hpp  PlaybackBuffer.cpp  PlaybackBuffer.hpp  Player.cpp  Player.hpp  RingBuffer.cpp  RingBuffer.hpp  SongDecoder.cpp  SongDecoder.hpp
src/BeatDetectCmd/: BeatDetectCmd.cpp  MultiTest.lua  Stubs.cpp  TestLowSampleRate.lua  TestMultiRun.lua  TestSelfSimilarity.lua
src/Controller/: AbstractController.hpp  AbstractEnumerator.hpp  MidiController.cpp  MidiController.hpp  MidiEnumerator.cpp  MidiEnumerator.hpp  MidiPort.cpp  MidiPort.hpp
src/DB/: Database.cpp  Database.hpp  DatabaseBackup.cpp  DatabaseBackup.hpp  DatabaseImport.cpp  DatabaseImport.hpp  DatabaseUpgrade.cpp  DatabaseUpgrade.hpp  TagImportExport.cpp  TagImportExport.hpp
src/TempoDetectCmd/: MultiTest.lua  TempoDetectCmd.cpp
src/UI/: ClassroomWindow.cpp  ClassroomWindow.hpp  ClassroomWindow.ui  ColorDelegate.cpp  ColorDelegate.hpp  PlayerWindow.cpp  PlayerWindow.hpp  PlayerWindow.ui  PlaylistItemModel.cpp  PlaylistItemModel.hpp  SongModel.cpp  SongModel.hpp  WaveformDisplay.cpp  WaveformDisplay.hpp
src/UI/Dlg/: DlgBackgroundTaskList.cpp  DlgBackgroundTaskList.hpp  DlgChooseImportTemplates.cpp  DlgChooseImportTemplates.hpp  DlgChooseImportTemplates.ui  DlgDebugLog.cpp  DlgDebugLog.hpp  DlgDebugLog.ui  DlgEditFilter.cpp  DlgEditFilter.hpp  DlgEditMultipleSongs.cpp  DlgEditMultipleSongs.hpp  DlgEditMultipleSongs.ui  DlgHistory.cpp  DlgHistory.hpp  DlgImportDB.cpp  DlgImportDB.hpp  DlgImportDB.ui  DlgLibraryMaintenance.cpp  DlgLibraryMaintenance.hpp  DlgLibraryMaintenance.ui  DlgLvsStatus.cpp  DlgLvsStatus.hpp  DlgLvsStatus.ui  DlgManageFilters.cpp  DlgManageFilters.hpp  DlgManageFilters.ui  DlgPickTemplate.cpp  DlgPickTemplate.hpp  DlgReadOnlyFiles.cpp  DlgReadOnlyFiles.hpp  DlgReadOnlyFiles.ui  DlgRemovedSongs.cpp  DlgRemovedSongs.hpp  DlgSongProperties.cpp  DlgSongProperties.hpp  DlgSongProperties.ui  DlgSongs.cpp  DlgSongs.hpp  DlgSongs.ui  (+9 more)
tests/: TagProcessing.cpp
tools/MidiControllerDump/: MidiControllerDump.sln  MidiControllerDump.vcxproj  MidiControllerDump.vcxproj.filters  README.md  main.cpp
translations/: SkauTan_cs.ts
